[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.poetry]
authors = ["Zaw W. Lwin <zaw.waiyan.lwin96@gmail.com>"]
description = "Poly Student Information System"
name = "poly"
packages = [{from = "src", include = "poly"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.11.1"
asyncpg = "0.28.0"
fastapi = "0.100.0"
hypercorn = {extras = ["uvloop"], version = "0.14.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python = "^3.10"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "2.0.19"}

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
httpx = "^0.24.1"
isort = "^5.12.0"
mypy = "1.4.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "0.21.1"
pytest-cov = "^4.1.0"
ruff = "0.0.278"
types-passlib = "^1.7.7.12"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
