[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.poetry]
authors = ["Zaw W. Lwin <zaw.waiyan.lwin96@gmail.com>"]
description = "Poly Student Information System"
name = "poly"
packages = [{from = "src", include = "poly"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.12.1"
asyncpg = "^0.29.0"
fastapi = "^0.104.1"
hypercorn = {extras = ["uvloop"], version = "^0.15.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python = "^3.10"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
httpx = "^0.25.1"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"
types-passlib = "^1.7.7.13"
types-python-jose = "^3.3.4.8"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
