[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.poetry]
authors = ["Zaw W. Lwin <zaw.waiyan.lwin96@gmail.com>"]
description = "Poly Student Information System"
name = "poly"
packages = [{from = "src", include = "poly"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
asyncpg = "^0.29.0"
casbin = "^1.35.0"
casbin-async-sqlalchemy-adapter = "^1.4.0"
fastapi = "^0.109.0"
hypercorn = {extras = ["uvloop"], version = "^0.16.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python = "^3.10"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
black = "^24.1.0"
httpx = "^0.26.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.14"
types-passlib = "^1.7.7.20240106"
types-python-jose = "^3.3.4.20240106"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
